<resources>
    <string name="app_name">Countdown Watch</string>
    <string name="action_settings">Settings</string>
    <string name="action_first">First</string>
    <string name="action_second">Second</string>
    <string name="action_third">Third</string>
    <string name="title_main_activity">Countdown</string>
    <string name="more">More</string>
    <string name="action_add">Add</string>
    <string name="action_add_fragment_title">Add Event</string>
    <string name="action_add_fragment_positive_button">Add</string>
    <string name="action_add_fragment_negative_button">Cancel</string>
    <string name="action_add_fragment_title_hint">Title</string>
    <string name="action_add_fragment_date_hint">Date</string>
    <string name="title">Title</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
</resources>
